<resources>
    <string name="app_name">AndroidJavaCourse</string>
    <string name="game_title">Hello</string>
    <string name="game_startBtn">Hello</string>
    <string name="image_description">Image</string>
    <string name="game_desc">Guess where the mail is.</string>
    <string name="btn_desc">Button</string>
    <string name="start_hello">Hello</string>
    <string name="start_calc">Calculator</string>
    <string name="calculator_firstnumber">First number</string>
    <string name="calculator_secondnumber">Second number</string>
    <string name="calculator_total">Total</string>
    <string name="calculator_title">Calculator</string>
    <string name="game_points">Previous Score:</string>
    <string name="game_percent">Cumulative Rate:</string>
    <string name="start_game">Game</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Location</string>
    <string name="title_notifications">Timer</string>
    <string name="location_longitude_hint">Longitude</string>
    <string name="location_latitude_hint">Latitude</string>
    <string name="location_address_hint">Address</string>
    <string name="location_showbutton_text">Show on map</string>
    <string name="apm_state_true">Airplanemode activated</string>
    <string name="apm_state_false">Airplanemode deactivated</string>
    <string name="game_toast">Found it</string>
    <string name="timer_start">Start</string>
    <string name="timer_stop">Stop</string>
    <string name="timer_pause">Pause</string>
    <string name="timer_continue">Continue</string>
    <string name="timer_ending">Time\'s out</string>
    <string name="home_searchHint">Search company by name</string>
    <string name="home_searchBtnText">Search</string>
    <string name="exam_toolbar">Exam</string>
    <string name="exam_title">Euroturist currency convertor</string>
    <string name="exam_error">Cannot convert value</string>
    <string name="exam_startingHint">Input amount and choose currency</string>
</resources>