<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="192dp"
        android:layout_height="329dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/mainHelloBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_hello" />

        <Button
            android:id="@+id/mainCalcBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_calc" />

        <Button
            android:id="@+id/mainGameBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_game" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>