<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B634ED"
    tools:context=".Game">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/gameToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="247dp"
        android:layout_height="90dp"
        android:focusable="false"
        android:text="@string/game_desc"
        android:textColor="#000000"
        android:textSize="20sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameToolbar"
        app:layout_constraintVertical_bias="0.6" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:focusable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/gameBtn1"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:backgroundTint="#FDD503"
                android:contentDescription="@string/btn_desc"
                android:scaleType="fitXY"
                app:srcCompat="@android:drawable/star_big_on" />

            <ImageButton
                android:id="@+id/gameBtn2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#FDD503"
                android:contentDescription="@string/btn_desc"
                android:scaleType="fitXY"
                app:srcCompat="@android:drawable/star_big_on" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/gameBtn3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#FDD503"
                android:contentDescription="@string/btn_desc"
                android:scaleType="fitXY"
                app:srcCompat="@android:drawable/star_big_on" />

            <ImageButton
                android:id="@+id/gameBtn4"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:backgroundTint="#FDD503"
                android:contentDescription="@string/btn_desc"
                android:scaleType="fitXY"
                app:srcCompat="@android:drawable/star_big_on" />
        </TableRow>

    </TableLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/refreshBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/btn_desc"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.845"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.44"
        app:srcCompat="@android:drawable/ic_popup_sync" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/refreshBtn"
        app:layout_constraintHorizontal_bias="0.398"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.45">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/scoreboard_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_points"
                android:textColor="#050505"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/scoreboard_desc2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_percent"
                android:textColor="#050505"
                android:textSize="20sp"
                android:textStyle="italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/scoreboard_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="6dp"
                android:text="2 / 4"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/scoreboard_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="6dp"
                android:text="100%"
                android:textColor="#000000"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>